--- a/index.css
+++ b/index.css
@@ -186,7 +186,6 @@ html {
 }
 
 /* Skills */
-.skills1 {}
 
 .skills2 {
     padding: 1% 7% 0 7%;
@@ -252,9 +251,8 @@ html {
 
 /* Projects */
 
-.project2 {
+/* .project2 {
     padding: 1% 7% 0 7%;
-    /* background-color: #1d1d1d; */
 }
 
 .project_items {
@@ -311,4 +309,58 @@ html {
 
 .violet {
     background-color: violet;
+} */
+
+
+.project2 {
+    padding: 1% 7% 0 7%;
+}
+
+.project_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 3vw 0 5vw 0;
+}
+
+.project_item {
+    width: 300px;
+    height: 400px;
+    /* border-radius: 10px; */
+    /* border-radius: 0 0 20px 20px; */
+    overflow: hidden;
+    box-shadow: 5px 40px 40px rgba(0, 0, 0, 0.2);
+    /* margin: 10px; */
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.project_title p {
+    font-family: "Paytone One", sans-serif;
+    font-size: 1.3rem;
+    letter-spacing: .15em;
+    padding: .7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.project_container a {
+    text-decoration: none;
+    background-color: #1d1d1d;
+    border-radius: 0 0 20px 20px;
+
+}
+
+.project_item img {
+    width: 100%;
+    height: 80%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.project_item img:hover {
+    transform: scale(1.1);
 }
