--- a/index.css
+++ b/index.css
@@ -326,14 +326,17 @@ html {
 .project_item {
     width: 300px;
     height: 400px;
-    /* border-radius: 10px; */
-    /* border-radius: 0 0 20px 20px; */
+    border-radius: 0 0 20px 20px;
     overflow: hidden;
-    box-shadow: 5px 40px 40px rgba(0, 0, 0, 0.2);
-    /* margin: 10px; */
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     display: flex;
     flex-direction: column;
     position: relative;
+    transition: all .2s ease-in-out;
+}
+
+.project_item:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .project_title p {
@@ -363,4 +366,80 @@ html {
 
 .project_item img:hover {
     transform: scale(1.1);
+}
+
+/* Footer */
+
+
+.footer2 {
+    padding: 1% 7% 0 7%;
+    background-color: #1d1d1d;
+    color: white;
+}
+
+.footer_heading {
+    margin: 4vh 0 2.5vh 0;
+}
+
+.footer .content {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    padding-bottom: 30px;
+}
+
+.footer .content div {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer .content h4 {
+    font-size: 1.3rem;
+    margin-bottom: 2.2vh;
+    text-align: left;
+    font-family: "Libre Baskerville", serif;
+}
+
+.footer .content p {
+    font-family: "Libre Baskerville", serif;
+    font-size: .8rem;
+    margin-bottom: 2vh;
+}
+
+.footer .content p a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    margin-bottom: 8px;
+}
+
+.footer .content p a:hover {
+    color: #ccc;
+}
+
+.footer .content .social-media p a {
+    display: flex;
+    align-items: center;
+}
+
+.footer .content .social-media p a i {
+    margin-right: 5px;
+}
+
+footer {
+    text-align: center;
+    padding: 10px 0;
+    color: white;
+}
+
+@media (max-width: 768px) {
+    .footer .content {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    .footer .content {
+        grid-template-columns: 1fr;
+    }
 }
